--- a/src/scss/components/sheet/_erps-profile-images.scss
+++ b/src/scss/components/sheet/_erps-profile-images.scss
@@ -30,7 +30,7 @@ $profile-inner-shadow-opacity-hover: 0.2;
 
 // Transitions
 $profile-transition: all tokens.$sheet-transition-medium;
-$profile-hover-scale: 1.05;
+$profile-hover-scale: 1.03;
 
 // Opacity values
 $profile-disabled-opacity: tokens.$sheet-opacity-disabled;
